Adição de Teste ResultPattern

--- a/ResultPattern.Tests/ResultPattern.Tests.csproj
+++ b/ResultPattern.Tests/ResultPattern.Tests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ResultPattern.App\ResultPattern.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
